# spark-mec-bp

./: .flake8  .gitignore  AuAgCu_15-15-70_2eV_1E19_10000res_integrals.txt  AuAgCu_NIST.txt  Dockerfile  LICENSE.md  Makefile  README.md  Untitled.ipynb  app.py  config.yaml  entrypoint.py  gather_data.py  plasma_temperature.py  prepare_spectrum.py  prepare_spectrum_config.yaml  pyproject.toml  requirements.txt  test-requirements.txt
adapters/: nist_ionization_energy_adapter.py  nist_spectrum_level_adapter.py  nist_spectrum_line_adapter.py
application/: __init__.py  app.py  config.py
calculators/: __init__.py  atom_concentration.py  integrals.py  ion_atom_concentration.py  temperature.py  total_concentration.py
configs/: nist_ionization_energy_adapter_config.py  nist_spectrum_level_adapter_config.py  nist_spectrum_line_adapter_config.py
converters/: atomic_levels.py
data_preparation/: atomic_lies_data_preparator.py  calculation_data_preparator.py  integral_calculator.py  spectrum_correction.py  spectrum_reader.py
lib/: __init__.py  electron_concetration.py  helper_functions.py  line_pair_checker.py  spectrum_corrector.py  voigt_integrals.py
new_codebase/: AgI_NIST.txt  ArI_NIST.txt  Au05Ag05Ar_T1_2eV_Ne1_5E17_5000R.txt  AuI_NIST.txt  MEBS_for_AuAg.py  MEBS_for_AuAg_with_noise_generator.py  electron_conentration_estimation.py  gather_data.py  spectrum_correction.py
nist/: atomic_lines.py  ionization_energy.py
nist_sdk/: atomic_levels.py  atomic_levels_test.py  atomic_lines.py  atomic_lines_test.py  ionization_energies.py  ionization_energies_test.py  (+2 more)
(+84 files in other folders)
